--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -10,7 +10,7 @@
         <ObjectDataProvider x:Key="GUIUtilKey" ObjectType="{x:Type local:GUIUtil}"/>
         <ObjectDataProvider x:Key="IP4UtilKey" ObjectType="{x:Type local:IP4Util}"/>
         <ObjectDataProvider x:Key="MACUtilKey" ObjectType="{x:Type local:MACUtil}"/>
-        <local:HexMultiConverter x:Key="hexmultivalueconverter"/>
+        <local:MultiConverterThreeArgs x:Key="multiconverterthreeargs"/>
         <local:IP4MultiConverterNumberOrAlias x:Key="IP4multiconverternumberoralias"/>
         <local:MACMultiConverterNumberOrAlias x:Key="MACmulticonverternumberoralias"/>
 
@@ -22,31 +22,15 @@
             <TextBlock Text="{Binding Path=headerdisplayinfo}"/>
         </DataTemplate>
         <DataTemplate DataType="{x:Type local:ARPH}">
-            <WrapPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Path=headerdisplayinfo}"/>
-                <TextBlock Text=", Protocol: "/>
-                <TextBlock>
-                    <TextBlock.Text>
-                        <MultiBinding Converter="{StaticResource hexmultivalueconverter}">
-                            <Binding Path="Prot"/>
-                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
-                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.WidthFour"/>
-                        </MultiBinding>
-                    </TextBlock.Text>
-                </TextBlock>
-                <TextBlock Text=", Sender HW: "/>
-                <TextBlock>
-                    <TextBlock.Text>
-                        <MultiBinding Converter="{StaticResource MACmulticonverternumberoralias}">
-                            <Binding Path="SenderHW"/>
-                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
-                        </MultiBinding>
-                    </TextBlock.Text>
-                </TextBlock>
-
-
-
-            </WrapPanel>            
+            <TextBlock>
+                <TextBlock.Text>
+                    <MultiBinding Converter="{StaticResource multiconverterthreeargs}">
+                        <Binding Path="headerdisplayinfo"/>
+                        <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                        <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
         </DataTemplate>
         
         <HierarchicalDataTemplate DataType="{x:Type local:DNSRRList}"
