--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="pviewer5.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:pviewer5"
         Title="MainWindow">
 
@@ -97,7 +98,6 @@
                 <CheckBox IsChecked="{Binding Path=Active}"/>
                 <Label Content="Active"/>
                 <Label Content="{Binding Path=DisplayInfo}"/>
-                <Button Content="Add Item" HorizontalAlignment="Right" Click="filter_addfilteritem"/>
                 <Button Content="Up" HorizontalAlignment="Right" Click="filter_moveup"/>
                 <Button Content="Dn" HorizontalAlignment="Right" Click="filter_movedown"/>
                 <Button Content="X" HorizontalAlignment="Right" Click="filter_delete"/>
@@ -107,11 +107,27 @@
             <Button Content="Add Filter" Click="filter_addfilter"/>
         </DataTemplate>
 
+        <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:Relations"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
         <DataTemplate DataType="{x:Type local:FilterItem}">
-                <TextBlock Text="{Binding Path=DisplayInfo}"/>
+            <WrapPanel Orientation="Horizontal">
+                <ComboBox ItemsSource="{Binding Source={StaticResource dataFromEnum}}" SelectedItem="{Binding Path=Relation}"/>
+                <TextBox Text=" "/>
+                <TextBlock Text="Value: "/>
+                <TextBox Text="{Binding Path=Value}"/>
+                <TextBlock Text=" Mask: "/>
+                <TextBox Text="{Binding Path=Mask}"/>
+            </WrapPanel>
+
+
+            
         </DataTemplate>
         <DataTemplate DataType="{x:Type local:FilterItemAddItem}">
-            <Button Content="Add Filter Item"/>
+            <Button Content="Add Filter Item" Click="filteritem_addfilteritem"/>
         </DataTemplate>
 
     </Window.Resources>
@@ -209,11 +225,11 @@
                         MinWidth="100"/>
                     
                 </WrapPanel>
-                <ListView Name="filtertree"
+                <TreeView Name="filtertree"
                         VirtualizingPanel.IsVirtualizing="True"
                         VirtualizingPanel.VirtualizationMode="Recycling"
                         ItemsSource="{Binding Path=filters.Filters}">
-                </ListView>
+                </TreeView>
 
             </WrapPanel>
         </GroupBox>
