--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -138,23 +138,23 @@
                 <TextBox MinWidth="100">
                     <TextBox.Text>
                         <MultiBinding Converter="{StaticResource IP4multiconverternumberoralias}">
-                            <Binding Path="Value">
-                                <Binding.ValidationRules>
-                                    <local:ValidateIP4Number/>
-                                </Binding.ValidationRules>
+                            <MultiBinding.ValidationRules>
+                                <local:ValidateIP4Number/>
+                            </MultiBinding.ValidationRules>
+                            <Binding Path="Value" UpdateSourceTrigger="PropertyChanged">
                             </Binding>
-                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay"/>
                             <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases"/>
                         </MultiBinding>
                     </TextBox.Text>
                     <TextBox.ToolTip>
                         <MultiBinding Converter="{StaticResource IP4multiconverternumberoraliasinverse}">
-                            <Binding Path="Value">
+                            <Binding Path="Value" UpdateSourceTrigger="PropertyChanged">
                                 <Binding.ValidationRules>
                                     <local:ValidateIP4Number/>
                                 </Binding.ValidationRules>
                             </Binding>
-                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay"/>
                             <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases"/>
                         </MultiBinding>
                     </TextBox.ToolTip>
