--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -139,9 +139,9 @@
                     <TextBox.Text>
                         <MultiBinding Converter="{StaticResource IP4multiconverternumberoralias}">
                             <MultiBinding.ValidationRules>
-                                <local:ValidateIP4Number/>
+                                <local:ValidateIP4NumberOrAlias/>
                             </MultiBinding.ValidationRules>
-                            <Binding Path="Value" UpdateSourceTrigger="PropertyChanged">
+                            <Binding Path="Value" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
                             </Binding>
                             <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay"/>
                             <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases"/>
@@ -151,7 +151,7 @@
                         <MultiBinding Converter="{StaticResource IP4multiconverternumberoraliasinverse}">
                             <Binding Path="Value" UpdateSourceTrigger="PropertyChanged">
                                 <Binding.ValidationRules>
-                                    <local:ValidateIP4Number/>
+                                    <local:ValidateIP4NumberOrAlias/>
                                 </Binding.ValidationRules>
                             </Binding>
                             <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay"/>
